Update stylesheet and script file references

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Happy Rose Day 🌹</title>
-  <link rel="stylesheet" href="stylerd.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -27,7 +27,7 @@
 
   <div class="petals"></div>
 
-  <script src="scriptrd.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
 
