--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
     <img 
-      src="C:\Users\Ritesh\Desktop\rd\dudu-giving-flowers-bubu-flowers.gif" 
+      src="dudu-giving-flowers-bubu-flowers.gif" 
       id="roseImg"
       alt="rose"
     >
@@ -30,4 +30,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
